--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 	<main>
 		<section class="about">
-			<p class="about__paragraph">Привет. Меня зовут Александр, живу в <abbr title="Это в Краснодарском крае :)">Армавире</abbr> <small>(готов к переезду)</small>. В основном делаю фронтенд: верстаю, пишу JS-код - для браузера или на Ноде. Есть опыт работы с VueJS (много) и React (мало).</p>
-			<p class="about__paragraph">Люблю компонентный подход, работу с АПИ и отделение логики бэкенда от фронтенда.</p>
-			<p class="about__paragraph">Иногда пишу библиотеки в <a href="https://github.com/alcovegan" class="link" target="_blank" title="Гитхаб">опенсорс</a>.</p>
+			<p class="about__paragraph">Привет. Я делаю фронтенд: верстаю, пишу JS-код — для браузера или на NodeJS. Есть много опыта работы с VueJS и немного с React. Люблю компонентный подход, работу с АПИ и отделение логики бэкенда от фронтенда. Иногда пишу библиотеки в <a href="https://github.com/alcovegan" class="link" target="_blank" title="Гитхаб">опенсорс</a>.</p>
 
-			<p class="about__paragraph">Всегда стараюсь быть в курсе того, что происходит в области разработки: читаю статьи, слушаю подкасты (в частности <a href="https://exit.sc/?url=https%3A%2F%2Fitunes.apple.com%2Fru%2Fpodcast%2Fveb-standarty%2Fid1080500016" class="link" target="_blank" title="Подкаст Веб-стандартов">Веб-стандарты</a>, <a href="https://radio-t.com" class="link" target="_blank" title="Подкаст Радио-Т">Радио-Т</a>, <a href="http://frontendweekend.ml/" class="link" target="_blank" title="Подкаст Frontend Weekend">Frontend Weekend</a> и <a href="https://spb-frontend.ru/podcast/" class="link" target="_blank" title="Подкаст SPB Frontend Drinkast">SPB Frontend Drinkast</a>).</p>
+			<p class="about__paragraph">Всегда стараюсь быть в курсе того, что происходит в области разработки: читаю статьи, слушаю подкасты (в частности <a href="https://exit.sc/?url=https%3A%2F%2Fitunes.apple.com%2Fru%2Fpodcast%2Fveb-standarty%2Fid1080500016" class="link" target="_blank" title="Подкаст Веб-стандартов">Веб-стандарты</a>, <a href="https://radio-t.com" class="link" target="_blank" title="Подкаст Радио-Т">Радио-Т</a>, <a href="http://frontendweekend.ml/" class="link" target="_blank" title="Подкаст Frontend Weekend">Frontend Weekend</a> и <a href="https://soundcloud.com/frontend_u" class="link" target="_blank" title="Подкаст Фронтенд Юность">Фронтенд Юность</a>). Немного интересуюсь разработкой игр: слушаю подкаст <a href="https://kdicast.com/" class="link" target="_blank" title="Подкаст Как делают игры">Как делают игры</a> и читаю книги по геймдеву (к примеру, <a href="https://www.amazon.com/Blood-Sweat-Pixels-Triumphant-Turbulent/dp/0062651234/" class="link" target="_blank" title="Blood, Sweat and Pixels">Blood, Sweat and Pixels</a> или серию книг <a href="https://bossfightbooks.com/" class="link" target="_blank" title="Boss Fight Books">Boss Fight Books</a>).</p>
 
-			<p class="about__paragraph">Помимо разработки люблю читать книги, слушать музыку и румынский артхаус. Иногда косвенно интересуюсь разработкой игр: слушаю подкаст <a href="https://kdicast.com/" class="link" target="_blank" title="Подкаст Как делают игры">Как делают игры</a> и читаю книги по геймдеву (например, <a href="https://www.amazon.com/Blood-Sweat-Pixels-Triumphant-Turbulent/dp/0062651234/" class="link" target="_blank" title="Blood, Sweat and Pixels">Blood, Sweat and Pixels</a> или серию книг <a href="https://bossfightbooks.com/" class="link" target="_blank" title="Boss Fight Books">Boss Fight Books</a>).</p>
+			<p class="about__paragraph">Готов к удаленной работе или переезду (в частности в Краснодар). В данный момент я нахожусь в <abbr title="Это в Краснодарском крае :)">Армавире</abbr>.</p>
+
+			<p class="about__paragraph">Помимо разработки люблю читать книги, слушать музыку, румынский артхаус и BMX.</p>
 		</section>
 
 		<section class="contacts">
@@ -50,7 +50,27 @@
 
 		<section class="projects" id="projects">
 			<h2 class="projects__title">Проекты</h2>
-			<p>Некоторые проекты, которые я делал. Вы можете заметить здесь <i>некоторое</i> количество доставок кафе - да, так получилось :)</p>
+			<p>Некоторые коммерческие проекты, которые я сделал. В основном я специализируюсь на создании удобных сайтов по доставке еды. Также здесь мои личные проекты по авиабилетам.</p>
+
+			<div class="project">
+				<div class="project__image">
+					<img src="images/projects/kupit-aviabilet.ru.jpg" alt="" class="project__img">
+				</div>
+
+				<div class="project__info">
+					<h3 class="project__name">Купить-Авиабилет.ru</h3>
+					<a href="http://pepperonis.ru" class="link project__link" target="_blank">pepperonis.ru</a>
+					<p class="project__desc">Сайт сделан для работы с партнерской программой Travelpayouts. Здесь было много работы с разными API и базой данных. Стояла задача сгенерировать максимальное количество страниц под низкочастотные запросы в тематике авиабилетов и собрать трафик. При этом страницы должны содержать какой-то контент, частью которого являются данные из API, часть - из баз данных с информацией о странах, городах, аэропортах, авиакомпаниях.</p>
+
+					<strong>Что было сделано:</strong>
+
+					<ul class="project__works">
+						<li class="project__work">Разработка бэкенда (NodeJS, Express, MongoDB, Kue)</li>
+						<li class="project__work">Разработка фронтенда (Bootstrap 4 + Nunjucks)</li>
+						<li class="project__work">Деплой на сервер (sh-скрипты + nginx + pm2)</li>
+					</ul>
+				</div>
+			</div>
 
 			<div class="project">
 				<div class="project__image">
@@ -60,7 +80,7 @@
 				<div class="project__info">
 					<h3 class="project__name">Пиццерия Pepperoni's</h3>
 					<a href="http://pepperonis.ru" class="link project__link" target="_blank">pepperonis.ru</a>
-					<p class="project__desc">Доставка еды для пиццерии Pepperoni's в Армавире</p>
+					<p class="project__desc">Доставка еды для пиццерии Pepperoni's в Армавире.</p>
 
 					<strong>Что было сделано:</strong>
 
@@ -81,7 +101,7 @@
 				<div class="project__info">
 					<h3 class="project__name">Кафе Dolce Vita</h3>
 					<a href="http://delivery.dolcevita.cafe" class="link project__link" target="_blank">delivery.dolcevita.cafe</a>
-					<p class="project__desc">Доставка еды для кофейни Dolce Vita. Сначала была запущена доставка еды, через время клиент попросил сделать конструктор пиццы. Ранее мной также была сделана <a href="http://dolcevita.cafe/" title="кафе DolceVita" class="link">главная страница</a> кафе - Wordpress + тема + немного кастомной верстки.</p>
+					<p class="project__desc">Доставка еды для кофейни Dolce Vita. Сначала я запустил доставку еды, затем клиент попросил добавить конструктор пиццы. До этого я сделал <a href="http://dolcevita.cafe/" title="кафе DolceVita" class="link">главную страницу</a> кафе: Wordpress с темой и кастомной версткой.</p>
 
 					<strong>Что было сделано:</strong>
 
@@ -103,7 +123,7 @@
 				<div class="project__info">
 					<h3 class="project__name">Доставка для сети кафе</h3>
 					<a href="http://delivery.california-cafe.ru" class="link project__link" target="_blank">delivery.california-cafe.ru</a>
-					<p class="project__desc">Доставка еды для сети армавирских кафе. Стояла задача разработать доставку еды с раздельными корзинами для каждого заведения после неудачной попытки заказчика реализовать то же самое с адекватной стоимостью на Iiko Widget.</p>
+					<p class="project__desc">Доставка еды для сети армавирских кафе. Мной была реализована доставка еды с раздельными корзинами для каждого из четырёх заведений. До этого клиент без успеха пытался реализовать это с адекватной стоимостью на Iiko Widget.</p>
 
 					<strong>Что было сделано:</strong>
 
