--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 				<div class="project__info">
 					<h3 class="project__name">Купить-Авиабилет.ru</h3>
-					<a href="http://pepperonis.ru" class="link project__link" target="_blank">pepperonis.ru</a>
+					<a href="http://kupit-aviabilet.ru/" class="link project__link" target="_blank">kupit-aviabilet.ru</a>
 					<p class="project__desc">Сайт сделан для работы с партнерской программой Travelpayouts. Здесь было много работы с разными API и базой данных. Стояла задача сгенерировать максимальное количество страниц под низкочастотные запросы в тематике авиабилетов и собрать трафик. При этом страницы должны содержать какой-то контент, частью которого являются данные из API, часть - из баз данных с информацией о странах, городах, аэропортах, авиакомпаниях.</p>
 
 					<strong>Что было сделано:</strong>
